fix: support to attributes superclass filtering