@@ -5,13 +5,15 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import org.springframework.data.jpa.domain.Specification;
 
 import javax.persistence.criteria.*;
+import javax.persistence.metamodel.Attribute;
+import java.lang.reflect.Field;
 import java.util.*;
 import java.util.stream.Collectors;
 
 public class QuerySpecification <T> implements Specification<T>  {
 
     private String filter = "";
-    private Map<String,String> params;
+    private final Map<String,String> params;
 
     public enum OP {
 
@@ -22,7 +24,7 @@ public class QuerySpecification <T> implements Specification<T>  {
         LE("$le", OperatorsImpl.le()),
         EQ("$eq", OperatorsImpl.eq());
 
-        private OperatorStrategy strategy;
+        private final OperatorStrategy strategy;
 
         private String operator;
 
@@ -79,14 +81,26 @@ public class QuerySpecification <T> implements Specification<T>  {
     }
 
     private Predicate[] generatePredicate(Root<T> root, CriteriaBuilder criteriaBuilder, Map<String, Object> filterMap) {
-        var attrs = root.getModel().getDeclaredAttributes();
-
+        var attrs = listAttributes(root);
         Predicate[] predicates = filterMap.keySet().stream()
-                .filter(key -> attrs.stream().anyMatch(item -> item.getName().equals(OperatorsImpl.getFieldByKey(key))))
+                .filter(key -> attrs.stream().anyMatch(item -> item.equals(OperatorsImpl.getFieldByKey(key))))
                 .map(key -> processCriteria(root, criteriaBuilder, key, filterMap.get(key)))
-                .toArray(value -> new Predicate[value]);
-
+                .toArray(Predicate[]::new);
         return predicates;
+    }
+
+    private Set<String> listAttributes(Root<T> root){
+        var attrs = root.getModel().getDeclaredAttributes();
+        var attrsStr = attrs.stream().map(Attribute::getName).collect(Collectors.toSet());
+        return listRecursiveSuperClass(root.getModel().getBindableJavaType(), attrsStr);
+    }
+
+    private Set<String> listRecursiveSuperClass(Class<?> clazz, Set<String> base){
+        if (clazz.getSuperclass() == null) return base;
+        var fields = Arrays.stream(clazz.getSuperclass().getDeclaredFields())
+                .map(Field::getName).collect(Collectors.toSet());
+        base.addAll(fields);
+        return listRecursiveSuperClass(clazz.getSuperclass(), base);
     }
 
     private Predicate processCriteria(Root<T> root, CriteriaBuilder criteria, String originalKey, Object data) {
@@ -97,7 +111,7 @@ public class QuerySpecification <T> implements Specification<T>  {
                     .stream()
                     .limit(1)
                     .map(key -> OP.byOperator(key).getStrategy().buildCriteria(root, criteria, originalKey, ConverterUtil.toComparable(attrt, originalKey, mapData.get(key))))
-                    .collect(Collectors.toList()).get(0);
+                    .toList().get(0);
         }else{
             return OP.EQ.getStrategy()
                     .buildCriteria(root,criteria, originalKey, ConverterUtil.toComparable(attrt, originalKey, data));
